--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
 <br><br>
 <br><br>
 
+
 <eu-input></eu-input>
 <br><br>
-<eu-input [icon]="'fa fa-user'"></eu-input>
+<!-- <eu-input [icon]="'fa fa-user'"></eu-input> -->
